--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -3,13 +3,42 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Intro of GraphX\n",
+    "# 1 Getting started with GraphX\n",
+    "\n",
+    "## 1.1 Intro of GraphX\n",
+    "\n",
+    "**GraphX is a component in Spark for graphs and graph-parallel computation**. At a high level, GraphX extends the Spark RDD by introducing a new Graph abstraction: **a directed multigraph with properties attached to each vertex and edge**. To support graph computation, GraphX exposes a set of fundamental operators (e.g., `subgraph, joinVertices, and aggregateMessages`) as well as an `optimized variant` of the [Pregel](https://spark.apache.org/docs/latest/graphx-programming-guide.html#pregel) API. In addition, GraphX includes a growing collection of graph algorithms and builders to simplify graph analytics tasks.\n",
     "\n",
     "The official doc can be found [here](https://spark.apache.org/docs/latest/graphx-programming-guide.html#getting-started)\n",
     "\n",
-    "We will use a new data structure called graph frames. The official doc can be found [here](https://graphframes.github.io/graphframes/docs/_site/user-guide.html)\n",
     "\n",
-    "The jar file can be downloaded [here](http://spark-packages.org/package/graphframes/graphframes)"
+    "## 1.2 Installation\n",
+    "Although GraphX is a component of Spark (no need to install), but it uses a special data structure (**graphframes**) which is not included in Spark by default.\n",
+    "We need to import the lib `graphframes` which allows us to create dataframe for graphe.\n",
+    "\n",
+    "The official doc of the data structure can be found [here](https://graphframes.github.io/graphframes/docs/_site/user-guide.html)\n",
+    "\n",
+    "The jar file can be downloaded [here](http://spark-packages.org/package/graphframes/graphframes)\n",
+    "\n",
+    "For scala api, it's quite simple, you can download the jar file, add the jar file to the context, Or ask the spark session to download it automatically by using below\n",
+    "`.config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12')`.\n",
+    "\n",
+    "For python api, you need to do the above steps, and you need to install a python wrapper in your virtual env.\n",
+    "\n",
+    "```shell\n",
+    "pip install graphframes\n",
+    "```\n",
+    "\n",
+    "> If you visit the pypi page of this package, it's a little outdated. But it's only a wrapper, for now I don't encounter any compatibility issues."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.3 A simple example"
    ],
    "metadata": {
     "collapsed": false
@@ -211,9 +240,21 @@
     }
    ],
    "source": [
-    "## Take a look at the DataFrames\n",
+    "# show the vertices (nodes)\n",
     "g.vertices.show()\n",
-    "g.edges.show()\n"
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# show the edges (relations between nodes)\n",
+    "g.edges.show()"
    ],
    "metadata": {
     "collapsed": false
@@ -259,9 +300,7 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
     "The GraphFrame we just created is a directed one, and can be visualized as follows:"
    ],
