--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -65,8 +65,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/06 16:17:05 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "23/07/06 16:17:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/07/07 13:36:43 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/07/07 13:36:43 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       ":: loading settings :: url = jar:file:/home/pengfei/opt/spark-3.3.0/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
      ]
     },
@@ -77,11 +77,11 @@
       "Ivy Default Cache set to: /home/pengfei/.ivy2/cache\n",
       "The jars for the packages stored in: /home/pengfei/.ivy2/jars\n",
       "graphframes#graphframes added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-53775aa4-4595-47fb-925c-1ea65b3bd159;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-737adafe-8024-4dc5-b8a7-9a37155c045b;1.0\n",
       "\tconfs: [default]\n",
       "\tfound graphframes#graphframes;0.8.2-spark3.2-s_2.12 in spark-packages\n",
       "\tfound org.slf4j#slf4j-api;1.7.16 in central\n",
-      ":: resolution report :: resolve 477ms :: artifacts dl 12ms\n",
+      ":: resolution report :: resolve 295ms :: artifacts dl 7ms\n",
       "\t:: modules in use:\n",
       "\tgraphframes#graphframes;0.8.2-spark3.2-s_2.12 from spark-packages in [default]\n",
       "\torg.slf4j#slf4j-api;1.7.16 from central in [default]\n",
@@ -91,16 +91,16 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   2   |   0   |   0   |   0   ||   2   |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-53775aa4-4595-47fb-925c-1ea65b3bd159\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-737adafe-8024-4dc5-b8a7-9a37155c045b\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 2 already retrieved (0kB/25ms)\n"
+      "\t0 artifacts copied, 2 already retrieved (0kB/5ms)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/06 16:17:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/07/07 13:36:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -109,13 +109,6 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/07/06 16:17:09 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -241,8 +234,7 @@
    ],
    "source": [
     "# show the vertices (nodes)\n",
-    "g.vertices.show()\n",
-    "\n"
+    "g.vertices.show()"
    ],
    "metadata": {
     "collapsed": false
@@ -302,7 +294,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The GraphFrame we just created is a directed one, and can be visualized as follows:"
+    "The GraphFrame we just created is a **directed graph**, and can be visualized as follows:\n",
+    "![graphx_graph_exp1.webp](../../../../images/graphx_graph_exp1.webp)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
