add spatial join notebook

--- a/notebooks/pyspark/advance/S02_Sedona/04.Spatial_join.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/04.Spatial_join.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "source": [
     "# Spatial join\n",
-    "\n"
+    "\n",
+    "Unlike join in the sql tables, the spatial join does not require the two tables share the same key. We can use different geo location relations to join two geo dataframes, for example:\n",
+    "- two polygon intersects\n",
+    "- a point is in a polygon/line\n",
+    "- a line cross a polygon\n",
+    "\n",
+    "In the below example, we join two geo dataframe by using the condition if the airport is in the country (a point in a polygon)"
    ],
    "metadata": {
     "collapsed": false
