--- a/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
@@ -969,11 +969,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "outputs": [],
    "source": [
-    "def get_nearest_district_of_hostpital()"
+    "def get_nearest_district_of_hospital(hospital_coordinates:str):\n",
+    "    query = f\"SELECT z.nom as commune_name, z.insee, ST_DistanceSphere(ST_PointFromText('{hospital_coordinates}', ','), z.geometry) AS distance FROM fr_zones as z ORDER BY distance ASC LIMIT 10\"\n",
+    "    print(query)\n",
+    "    return sedona.sql(query)\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "Bichat_Claude_Bernard = \"2.3318, 48.8989\""
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT z.nom as commune_name, z.insee, ST_DistanceSphere(ST_PointFromText('2.3318, 48.8989', ','), z.geometry) AS distance FROM fr_zones as z ORDER BY distance ASC LIMIT 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 40:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------------------+\n",
+      "|commune_name                                                                    |insee                                                                           |distance          |\n",
+      "+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------------------+\n",
+      "|Saint-Ouen-sur-Seine                                                            |93070                                                                           |1203.6350169395325|\n",
+      "|Clichy-la-Garenne                                                               |92024                                                                           |2930.2283994384406|\n",
+      "|Villeneuve-la-Garenne                                                           |92078                                                                           |4286.473317131374 |\n",
+      "|L'Île-Saint-Denis                                                               |93039                                                                           |4333.932632693258 |\n",
+      "|Saint-Denis                                                                     |93066                                                                           |4586.5773233611   |\n",
+      "|Paris                                                                           |75056                                                                           |4855.962690619354 |\n",
+      "|Levallois-Perret                                                                |92044                                                                           |5011.414560699081 |\n",
+      "|Asnières-sur-Seine                                                              |92004                                                                           |5245.627393000233 |\n",
+      "|Gennevilliers                                                                   |92036                                                                           |5781.882118659237 |\n",
+      "|Aubervilliers                                                                   |93001                                                                           |6050.297718643379 |\n",
+      "+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "bcb_nearest_commune = get_nearest_district_of_hospital(Bichat_Claude_Bernard)\n",
+    "bcb_nearest_commune.show(truncate=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
