--- a/notebooks/pyspark/advance/S01_GraphX/03.Biparti_graph.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/03.Biparti_graph.ipynb
@@ -8,15 +8,43 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pyspark.sql import SparkSession\n",
+    "import os\n",
+    "from pyspark.sql import Row\n",
+    "from graphframes import GraphFrame"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "import os\n"
+    "\n",
+    "def buildEdgesLabels(graph:GraphFrame):\n",
+    "    edgeLabels = {}\n",
+    "    # edgeList is a list of spark dataframe rows\n",
+    "    edgeList = graph.edges.collect()\n",
+    "    for edgeItem in edgeList:\n",
+    "        edgeLabels[(edgeItem[\"src\"], edgeItem[\"dst\"])]=edgeItem[\"type\"]\n",
+    "    return edgeLabels\n",
+    "\n",
+    "def drawGraph(graph:GraphFrame):\n",
+    "    nxGraph = nx.Graph()\n",
+    "    for edge in graph.edges.collect():\n",
+    "        nxGraph.add_edge(edge[\"src\"], edge[\"dst\"])\n",
+    "    \n",
+    "    # Define layout\n",
+    "    pos = nx.spring_layout(nxGraph, seed=42)\n",
+    "    \n",
+    "    # Draw nodes and edges\n",
+    "    nx.draw(nxGraph, pos, with_labels=True, node_size=500, node_color='lightblue', font_size=10, font_color='black')\n",
+    "    labels = buildEdgesLabels(g)\n",
+    "    nx.draw_networkx_edge_labels(nxGraph, pos, edge_labels=labels)\n",
+    "    \n",
+    "    plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -122,7 +150,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "from pyspark.sql import Row\n",
+    "\n",
     "\n",
     "vertices = spark.createDataFrame([('1', 'Carter', 'Derrick', 50),\n",
     "                                  ('2', 'May', 'Derrick', 26),\n",
@@ -170,7 +198,7 @@
     }
    ],
    "source": [
-    "from graphframes import GraphFrame\n",
+    "\n",
     "\n",
     "graph = GraphFrame(vertices, edges)\n"
    ],
@@ -255,6 +283,32 @@
     }
    },
    "id": "727a27502e45f4a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graph' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mtype\u001B[39m(\u001B[43mgraph\u001B[49m\u001B[38;5;241m.\u001B[39medges\u001B[38;5;241m.\u001B[39mcollect()))\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'graph' is not defined"
+     ]
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-27T15:17:40.250780347Z",
+     "start_time": "2023-09-27T15:17:39.944233377Z"
+    }
+   },
+   "id": "24df4a7917ec41ba"
   },
   {
    "cell_type": "code",
