--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -618,31 +618,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'g' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 5\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[1;32m      4\u001B[0m nx_graph \u001B[38;5;241m=\u001B[39m nx\u001B[38;5;241m.\u001B[39mGraph()\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m edge \u001B[38;5;129;01min\u001B[39;00m \u001B[43mg\u001B[49m\u001B[38;5;241m.\u001B[39medges\u001B[38;5;241m.\u001B[39mcollect():\n\u001B[1;32m      6\u001B[0m     nx_graph\u001B[38;5;241m.\u001B[39madd_edge(edge[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msrc\u001B[39m\u001B[38;5;124m\"\u001B[39m], edge[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdst\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[1;32m      8\u001B[0m \u001B[38;5;66;03m# Define layout\u001B[39;00m\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'g' is not defined"
-     ]
-    }
-   ],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:01.821957588Z",
-     "start_time": "2023-09-27T15:01:00.813762549Z"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## 4. Motif finding\n",
@@ -788,7 +763,7 @@
     "\n",
     "To finish up, we’ll discover two additional built-in algorithms. TriangleCount counts the number of triangles passing through each vertex in this graph. A triangle can be defined as a group of three vertices that is interrelated, i.e. a has an edge to b, b has an edge to c, and c has an edge to a. The example below shows a graph with two triangles.\n",
     "\n",
-    "![](../../../../images/graphx_graph_exp2.webp)\n",
+    "![graphx_graph_exp2.webp](../../../../images/graphx_graph_exp2.webp)\n",
     "\n",
     "In the GraphFrames package you can count the number of triangles passing through each vertex by invoking the triangleCount-function. Note that our simple example has only two triangles in total. Triangles are used for various tasks for real‐life networks, including community discovery, link prediction, and spam filtering."
    ],
