--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -11,8 +11,12 @@
     "\n",
     "The official doc can be found [here](https://spark.apache.org/docs/latest/graphx-programming-guide.html#getting-started)\n",
     "\n",
+    "## 1.2 Background\n",
     "\n",
-    "## 1.2 Installation\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 1.3 Installation\n",
     "Although GraphX is a component of Spark (no need to install), but it uses a special data structure (**graphframes**) which is not included in Spark by default.\n",
     "We need to import the lib `graphframes` which allows us to create dataframe for graphe.\n",
     "\n",
