--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -11,9 +11,32 @@
     "\n",
     "The official doc can be found [here](https://spark.apache.org/docs/latest/graphx-programming-guide.html#getting-started)\n",
     "\n",
-    "## 1.2 Background\n",
+    "## 1.2 GraphX main operators\n",
+    "\n",
+    "- Basic Operators:\t\n",
+    "        - numEdges\n",
+    "        - numVertices\n",
+    "        - inDegrees\n",
+    "        - outDegrees\n",
+    "        - degrees\n",
+    " \n",
+    "- Property Operators\n",
+    "        - mapVertices\n",
+    "        - mapEdges\n",
+    "        - mapTriplets\n",
+    " \n",
+    "- Structural Operators\n",
+    "       - reverse\n",
+    "       - subgraph\n",
+    "       - mask\n",
+    "       - groupEdges\n",
+    " \n",
+    "- Join Operators\n",
+    "       - joinVertices\n",
+    "       - outerJoinVertices\n",
     "\n",
     "\n",
+    "> Use the built-in operator when it's possible, the udf will decrease the performance \n",
     "\n",
     "\n",
     "## 1.3 Installation\n",
@@ -33,7 +56,17 @@
     "pip install graphframes\n",
     "```\n",
     "\n",
-    "> If you visit the pypi page of this package, it's a little outdated. But it's only a wrapper, for now I don't encounter any compatibility issues."
+    "> If you visit the pypi page of this package, it's a little outdated. But it's only a wrapper, for now I don't encounter any compatibility issues.\n",
+    "\n",
+    "## 1.4 GraphFrames\n",
+    "\n",
+    "**GraphFrames**, a new addition to Spark graph data processing toolset, integrates the features like pattern matching and graph algorithms with Spark SQL. Vertices and edges are represented as DataFrames instead of RDD objects.\n",
+    "\n",
+    "GraphFrames simplify the graph data analytics pipeline and optimize the queries across both graph and relational data. It provides some advantages as shown below compared to the RDD based graph data processing:\n",
+    "\n",
+    " - Support for Python and Java in addition to Scala APIs. Now we can use GraphX algorithms in all three languages.\n",
+    "  - Advanced query capability using the Spark SQL and DataFrames API. Graph-aware query planner uses materialized views to improve the query performance.\n",
+    "  - We can also save and load graphs using formats like Parquet, JSON, and CSV.\n"
    ],
    "metadata": {
     "collapsed": false
